Bug 1899043 - Ensure we consistently teardown GMP video decoder state. r=media-playback-reviewers,padenot

This patch makes it so we are consistent in how we teardown the GMP
video decoder, in particular when we encounter an error callback from
the plugin. We may fail during a call to initialize the decoder for
example, and should not attempt to use any GMP APIs on our proxy after
it because its internal state is default initialized and it doesn't
check always for null pointers.

Differential Revision: https://phabricator.services.mozilla.com/D211679